force-app/main/default/objects/Account/fields/Customer_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Customer_Alerts__c</fullName>
    <label>Customer Alerts</label>
    <type>LongTextArea</type>
    <length>500</length>
    <description>Tech-facing heads-up surfaced on the Site step. Examples: "Dog bites — park in front", "Gate code 4521", "Customer requests no spraying near koi pond". Empty = no alert card rendered.</description>
</CustomField>