force-app/main/default/objects/Account/fields/Eligible_Upsells__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Upsells__c</fullName>
    <label>Eligible Upsells</label>
    <type>MultiselectPicklist</type>
    <description>Service lines this Account is eligible to be pitched. Drives UpsellCoachService.recommend() candidate filtering. Authored in P1.7.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pest</fullName><default>false</default><label>Pest</label></value>
            <value><fullName>Termite</fullName><default>false</default><label>Termite</label></value>
            <value><fullName>Mosquito</fullName><default>false</default><label>Mosquito</label></value>
            <value><fullName>Lawn</fullName><default>false</default><label>Lawn</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>