force-app/main/default/objects/Account/fields/Last_Upsell_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Last_Upsell_Outcome__c</fullName>
    <label>Last Upsell Outcome</label>
    <type>Picklist</type>
    <description>Outcome captured by tech or agent for the last upsell pitch. Drives Manager Coaching dashboard conversion metrics. Authored in P1.7.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>QuotedYes</fullName><default>false</default><label>Quoted Yes</label></value>
            <value><fullName>NotNow</fullName><default>false</default><label>Not Now</label></value>
            <value><fullName>NotInterested</fullName><default>false</default><label>Not Interested</label></value>
            <value><fullName>NoResponse</fullName><default>false</default><label>No Response</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>