force-app/main/default/objects/Account/fields/Last_Upsell_Pitched__c.field-meta.xml
<CustomField>
    <fullName>Last_Upsell_Pitched__c</fullName>
    <label>Last Upsell Pitched At</label>
    <type>DateTime</type>
    <description>Timestamp of the most recent upsell pitch made to this Account. Stamped by UpsellCoachService when an outcome is recorded. Authored in P1.7.</description>
</CustomField>