force-app/main/default/objects/Account/fields/Last_Upsell_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Last_Upsell_Service_Line__c</fullName>
    <label>Last Upsell Service Line</label>
    <type>Picklist</type>
    <description>Service line that was last pitched to this Account. Pairs with Last_Upsell_Pitched__c and Last_Upsell_Outcome__c. Authored in P1.7.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pest</fullName><default>false</default><label>Pest</label></value>
            <value><fullName>Termite</fullName><default>false</default><label>Termite</label></value>
            <value><fullName>Mosquito</fullName><default>false</default><label>Mosquito</label></value>
            <value><fullName>Lawn</fullName><default>false</default><label>Lawn</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>