force-app/main/default/objects/Account/fields/Upsell_Score__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Score__c</fullName>
    <label>Upsell Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>0–100 composite score from UpsellCoachService.recommend(). Higher score means stronger upsell candidate. Authored in P1.7.</description>
</CustomField>