force-app/main/default/objects/Account/fields/Upsell_Score_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Score_Last_Updated__c</fullName>
    <label>Upsell Score Last Updated</label>
    <type>DateTime</type>
    <description>Timestamp of the most recent Upsell_Score__c recompute. Authored in P1.7.</description>
</CustomField>